# Covid-19-Detection

./: .gitignore  README.md  data_proc.py  pyproject.toml  requirements.txt  run.py
app/helper/: calc_risk.py  csv_helper.py  mf.py  skfuzzy_mp.py  symptoms.py
app/src/: graph.py  views.py
src/: mainWeb.py
