[tool.poetry]
name = "covid19tarama-bulanikmantik"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.72.0"
numpy = "^1.19.4"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
pyit2fls = "^0.6.0"
Flask = "^1.1.2"
scikit-fuzzy = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
